--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "@types/node": "^16.10.4",
     "typescript": "^4.4.4"
+  },
+  "scripts": {
+    "dev": "yarn tsc --watch"
   }
 }
